# renovatedemo

./: BUILD.bazel  README.md  WORKSPACE
demo/: BUILD.bazel
tools/go/: def.bzl
